chore(CHANGELOG.md): update changelog with fix for hiding message content and fixing Dark Mode interface issue in "Your Profile" fix(zadark.scss): fix background color of primary info container in Dark Mode interface

--- a/src/core/scss/zadark.scss
+++ b/src/core/scss/zadark.scss
@@ -2022,10 +2022,9 @@ html[data-zadark-theme="dark"] {
       padding: 0 8px;
     }
 
-    // Media Viewer
-    // .media-viewer-layout .media-viewer__header {
-
-    // }
+    .pi-info-layout__primary-info-container {
+      background-color: var(--bg-default);
+    }
   }
 }
 
